--- a/index.html
+++ b/index.html
@@ -12,17 +12,36 @@
 </head>
 <body>
   <main class="container">
-    <div>
-      <img src="images/icon-star.svg" alt="star">
+    <div class="card">
+      <div class="star">
+        <img src="images/icon-star.svg" alt="star">
+      </div>
+      <h1 class="main-question">How did we do?</h1>
+      <p class="main-text">Please let us know how we did with your support request. All feedback is appreciated 
+        to help us improve our offering!
+      </p>
+      <div class="vote">
+        <div class="numbers">
+          1
+        </div>
+        <div class="numbers">
+          2
+        </div>
+        <div class="numbers">
+          3
+        </div>
+        <div class="numbers">
+          4
+        </div>
+        <div class="numbers">
+          5
+        </div>
+      </div>
+      <button class="submit_button">
+        Submit
+      </button>
     </div>
-    <h1>How did we do?</h1>
-    <p>Please let us know how we did with your support request. All feedback is appreciated 
-      to help us improve our offering!
-    </p>
-    <div>1 2 3 4 5</div>
-    <button>
-      Submit
-    </button>
+    
   </main>
 
   <footer>
