Added result page

--- a/second.html
+++ b/second.html
@@ -13,33 +13,15 @@
 <body>
   <main class="container">
     <div class="card">
-      <div class="star">
-        <img src="images/icon-star.svg" alt="star">
+      <div class="thank-you-image">
+        <img src="images/illustration-thank-you.svg" alt="Thank you image">
       </div>
-      <h1 class="main-question">How did we do?</h1>
-      <p class="main-text">Please let us know how we did with your support request. All feedback is appreciated 
-        to help us improve our offering!
+      <h2 class="choice">You selected 4 out of 5</h2>
+      <h1 class="thank">Thank you!</h1>
+      <p class="thank-text">
+        We appreciate you taking the time to give a rating. If you ever need more support, 
+  don’t hesitate to get in touch!
       </p>
-      <div class="vote">
-        <div class="numbers">
-          1
-        </div>
-        <div class="numbers">
-          2
-        </div>
-        <div class="numbers">
-          3
-        </div>
-        <div class="numbers">
-          4
-        </div>
-        <div class="numbers">
-          5
-        </div>
-      </div>
-      <button class="submit_button">
-        Submit
-      </button>
     </div>
     
   </main>
@@ -47,7 +29,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="second.html">Anna Shapovalova</a>.
+      Coded by <a href="index.html">Anna Shapovalova</a>.
     </div>
   </footer>
 </body>
