Created JS file

--- a/index.html
+++ b/index.html
@@ -50,5 +50,7 @@
       Coded by <a href="second.html">Anna Shapovalova</a>.
     </div>
   </footer>
+
+<script src="index.js"></script>
 </body>
 </html>
