--- a/index.html
+++ b/index.html
@@ -11,43 +11,56 @@
   <title>Interactive rating component</title>
 </head>
 <body>
-  <main class="container">
+  <div class="container main-container">
     <div class="card">
       <div class="star">
-        <img src="images/icon-star.svg" alt="star">
+        <img src="images/icon-star.svg" alt="Star-image">
       </div>
       <h1 class="main-question">How did we do?</h1>
       <p class="main-text">Please let us know how we did with your support request. All feedback is appreciated 
         to help us improve our offering!
       </p>
-      <div class="vote">
-        <div class="numbers">
-          1
-        </div>
-        <div class="numbers">
-          2
-        </div>
-        <div class="numbers">
-          3
-        </div>
-        <div class="numbers">
-          4
-        </div>
-        <div class="numbers">
-          5
-        </div>
-      </div>
+      <ul class="vote">
+        <li class="numbers">
+          <button>1</button>
+        </li>
+        <li class="numbers">
+          <button>2</button>
+        </li>
+        <li class="numbers">
+          <button>3</button>
+        </li>
+        <li class="numbers">
+          <button>4</button>
+        </li>
+        <li class="numbers">
+          <button>5</button>
+        </li>
+      </ul>
       <button class="submit_button">
         Submit
       </button>
     </div>
-    
-  </main>
+  </div>
+
+  <div class="container thank-you-container">
+    <div class="card">
+      <div class="thank-you-image">
+        <img src="images/illustration-thank-you.svg" alt="Thank you image">
+      </div>
+      <h2 class="choice">You selected 4 out of 5</h2>
+      <h1 class="thank">Thank you!</h1>
+      <p class="thank-text">
+        We appreciate you taking the time to give a rating. If you ever need more support, 
+  don’t hesitate to get in touch!
+      </p>
+    </div>
+  </div>
 
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="second.html">Anna Shapovalova</a>.
+      Coded by <a href="#">Anna Shapovalova</a>.
     </div>
   </footer>
 
